doc: updated swagger doc
